--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -w",
+    "start": "webpack --watch --display-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
